Enabled search functionality. Fixed some bugs. Navigation links showing on narrow viewports

--- a/src/components/CartItem.css
+++ b/src/components/CartItem.css
@@ -6,9 +6,11 @@
 .cart-item__row-1 {
   display: flex;
   gap: 2em;
+  flex-wrap: wrap;
 }
 .cart-item__image {
-  width: 20%;
+  width: 5em;
+  object-fit: contain;
   /* height: 10%; */
 }
 .cart-item__text {
@@ -27,6 +29,8 @@
 .cart-item__row-2 {
   display: flex;
   justify-content: space-between;
+  gap: 1em;
+  flex-wrap: wrap;
 }
 .cart-item__remove {
   color: var(--color);
@@ -62,4 +66,16 @@
   width: 30%;
   height: 100%;
   top: 1.3em;
+}
+@media screen and (min-width: 20em) {
+  .cart-item__row-1 {
+    flex-wrap: nowrap;
+  }
+  .cart-item__image {
+    width: 20%;
+  }
+  .cart-item__row-2 {
+    flex-wrap: nowrap;
+    gap: 0;
+  }
 }
